force-app/main/default/objects/commissionBaseInput__c.object
<CustomObject>
    <description>Base Input object from detailed data that contains commission values.  This becomes the historical lookup for items and split values for a user by document.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commission Base Inputs</relationshipLabel>
        <relationshipName>Commission_Base_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Base_Unique_Id__c</fullName>
        <label>Commission Base Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Commission sales rep that this transaction is associated with</inlineHelpText>
        <label>Commission Sales Rep</label>
        <referenceTo>Commission_Sales_Rep__c</referenceTo>
        <relationshipLabel>Commission Base Inputs</relationshipLabel>
        <relationshipName>Commission_Base_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Split__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Commission Split this was associated with</inlineHelpText>
        <label>Commission Split</label>
        <referenceTo>commissionSplit__c</referenceTo>
        <relationshipLabel>Commission Base Inputs</relationshipLabel>
        <relationshipName>Commission_Base_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orig_Doc_Ext_Cost__c</fullName>
        <inlineHelpText>Original Document Extended Cost (Before Split)</inlineHelpText>
        <label>Orig_Doc_Ext_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orig_Doc_Ext_Sales__c</fullName>
        <label>Orig_Doc_Ext_Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orig_Doc_Freight__c</fullName>
        <label>Orig_Doc_Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Quote Associated with this Line Item (if Exists)</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Commission Base Inputs</relationshipLabel>
        <relationshipName>Commission_Base_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>cflCustStruct__Sales_Order__c</referenceTo>
        <relationshipLabel>Commission Base Inputs</relationshipLabel>
        <relationshipName>Commission_Base_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SplitDocumentGp__c</fullName>
        <description>Split Document Gross profit (Sales - Cost - Freight Cost)</description>
        <formula>Split_Doc_Ext_Sales__c - Split_Doc_Ext_Cost__c - Split_Doc_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Split Document Gross profit (Sales - Cost - Freight Cost)</inlineHelpText>
        <label>Split Document GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Doc_Ext_Cost__c</fullName>
        <formula>IF( ISNULL( Split_Percent__c ) ,  Orig_Doc_Ext_Cost__c , ( Orig_Doc_Ext_Cost__c  *  Split_Percent__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split_Doc_Ext_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Doc_Ext_Sales__c</fullName>
        <formula>IF( ISNULL( Split_Percent__c ) , Orig_Doc_Ext_Sales__c, ( Orig_Doc_Ext_Sales__c * Split_Percent__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split_Doc_Ext_Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Doc_Freight__c</fullName>
        <formula>IF( ISNULL( Split_Percent__c ) , Orig_Doc_Freight__c , ( Orig_Doc_Freight__c * Split_Percent__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split_Doc_Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Document_Origin__c</fullName>
        <label>Split Document Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_Percent__c</fullName>
        <label>Split Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Templates_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Templates Config</label>
        <referenceTo>AC_Templates_Config__c</referenceTo>
        <relationshipLabel>Commission Base Inputs</relationshipLabel>
        <relationshipName>Commission_Base_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>documentType__c</fullName>
        <inlineHelpText>Originating document type (Type Of (Quote / Opportunity / Invoice etc...)  Edit Flow and PickList values</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>originalDocumentGp__c</fullName>
        <description>Original Document Gross Profit (Sales - Cost - Freight Cost)</description>
        <formula>Orig_Doc_Ext_Sales__c - Orig_Doc_Ext_Cost__c - Orig_Doc_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original Document Gross Profit (Sales - Cost - Freight Cost)</inlineHelpText>
        <label>Original Document Gp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>originalDocumentMargin__c</fullName>
        <formula>1-( originalDocumentTotalCost__c /  Orig_Doc_Ext_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Margin including Freight</inlineHelpText>
        <label>Original Document Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>originalDocumentTotalCost__c</fullName>
        <formula>Orig_Doc_Freight__c + Orig_Doc_Ext_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original Document Total Cost (Cost + freight Cost)</inlineHelpText>
        <label>Original Document Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>splitDocumentMargin__c</fullName>
        <formula>1- ( splitDocumentTotalCost__c / Split_Doc_Ext_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Split Document Total Margin (Including Freight Cost)</inlineHelpText>
        <label>Split Document Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>splitDocumentTotalCost__c</fullName>
        <formula>Split_Doc_Ext_Cost__c + Split_Doc_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Split Document Total Cost (Cost + freight)</inlineHelpText>
        <label>Split Document Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Base Input</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Split_Document_Origin__c</columns>
        <columns>Commission_Split__c</columns>
        <columns>Account__c</columns>
        <columns>Orig_Doc_Freight__c</columns>
        <columns>Orig_Doc_Ext_Cost__c</columns>
        <columns>Orig_Doc_Ext_Sales__c</columns>
        <columns>Commission_Sales_Rep__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Templates_Config__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Commission Base Input</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Base Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>